# pganonymize

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .pylintrc  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  DEPLOY.md  Dockerfile  LICENSE.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  pytest.ini  readthedocs.yaml  requirements-tox.txt  requirements.txt  sample_schema.yml  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  python-test.yml  python_test.yml  test-publish.yml  test.yml
docs/: Makefile  api.rst  conf.py  deploy.rst  documentation.rst  index.rst  links.rst  localization.rst  make.bat  pganonymize.rst  pganonymizer.rst  schema.rst  tests.rst
pganonymize/: __main__.py  cli.py  config.py  constants.py  providers.py  utils.py
pganonymizer/: __main__.py  api.py  cli.py  constants.py  exceptions.py  main.py  providers.py  utils.py
requirements/: Makefile  base.in  base.txt  dev-py2.in  dev-py2.txt  dev-py3.in  dev-py3.txt  dev.in  dev.txt  production.in  production.txt  test.in  test.txt  tox-py2.in  tox-py2.txt  tox-py3.in  tox-py3.txt  tox.in  tox.txt
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_providers.py  test_utils.py  utils.py
tests/schemes/: invalid_schema.yml  schema_with_env_variables.yml  valid_schema.yml
