[tool.poetry]
name = "postgresql-anonymizer"
version = "0.6.1"
description = "Commandline tool to anonymize PostgreSQL databases"
authors = [
    "Henning Kage <henning.kage@rheinwerk-verlag.de>"
]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/rheinwerk-verlag/postgresql-anonymizer"
repository = "https://github.com/rheinwerk-verlag/postgresql-anonymizer"

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"
Faker = [
    { version = "^3.0.0", python = "~2.7"},
    { version = "^4.9.0", python = "^3.5"}
]
psycopg2-binary = "^2.8.4"
pyyaml = "^5.2"
parmap = "^1.5.2"
tqdm = "^4.61.1"
pgcopy = "^1.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
mock = "^3.0.5"
pytest = "^4.1"
pytest-pep8 = "^1.0.6"
pytest-cov = "^2.8.1"
pytest-pythonpath = "^0.7.3"
ipdb = "^0.12.3"
isort = "^4.3.21"
wheel = "^0.33.6"
Sphinx = "<2.3.1"
recommonmark = "^0.6.0"
sphinx_rtd_theme = "^0.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
