[tool.poetry]
name = "postgresql-anonymizer"
version = "0.7.0"
description = "Commandline tool to anonymize PostgreSQL databases"
authors = [
    "Henning Kage <henning.kage@rheinwerk-verlag.de>"
]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/rheinwerk-verlag/postgresql-anonymizer"
repository = "https://github.com/rheinwerk-verlag/postgresql-anonymizer"

[tool.poetry.dependencies]
python = "~2.7 || ^3.6"
Faker = [
    { version = "^3.0.0", python = "~2.7" },
    { version = "^9.9.0", python = "^3.6" }
]
psycopg2-binary = [
    { version = "~2.8.4", python = "~2.7" },
    { version = "^2.9.2", python = "^3.6" }
]
pyyaml = [
    { version = "^5.4.1", python = "~2.7" },
    { version = "^6.0", python = "^3.6" }
]
pygments = [
    { version = "^2.7.4", python = "^3.6"}
]
parmap = [
    { version = "1.5.2", python = "~2.7" },
    { version = "^1.5.2", python = "^3.6" }
]
tqdm = "^4.61.1"
pgcopy = "^1.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
mock = "^3.0.5"
pytest = "^4.1"
pytest-pep8 = "^1.0.6"
pytest-cov = "^2.8.1"
pytest-pythonpath = "^0.7.3"
ipdb = "^0.12.3"
isort = "^4.3.21"
wheel = "^0.33.6"
Sphinx = "<2.3.1"
recommonmark = "^0.6.0"
sphinx_rtd_theme = "^0.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
